# AI-Agent-Solving-Security-Challenges

./: README.md  demo.yml  pyproject.toml
reports/: report-0.md  report-1.md  report-2.md  report-3.md  report-4.md
src/pizza_hackers/: crew-back.py  main.py
src/pizza_hackers/config/: agents.yaml  tasks.yaml
src/pizza_hackers/tools/: challenge_status_reader_tool.py
